Added ability to skip section content to section.

--- a/app/views/sections/edit_settings.html.erb
+++ b/app/views/sections/edit_settings.html.erb
@@ -30,6 +30,12 @@
 						<span>Publish this section to your challenge so it is visible to everyone</span>
 					</label>
 				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_skip_content %>
+						<span>Skip content section and go straight to quiz</span>
+					</label>
+				</li>
 			</ul>
 		</div>
 	</div>
