Added ability to delete user from company page.

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -17,6 +17,7 @@
 					<th>User Type</th>
 					<th>Enrolled Paths</th>
 					<th>Points Earned</th>
+					<th>Status</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -43,6 +44,7 @@
 							<td><%= truncate(enrolled_paths, :length => 80) %></td>
 						<% end %>
 						<td><%= u.earned_points.to_s %></td>
+						<td><%= link_to "Delete", u, :method => "delete", :confirm => "Are you sure you want to delete this user?", :class => "btn secondary" %></td>
 					</tr>
 					<% user_counter += 1 %>
 				<% end %>
