Rephrasing paths and tasks to challenges and questions.

--- a/app/views/sections/_tab_navigation.html.erb
+++ b/app/views/sections/_tab_navigation.html.erb
@@ -10,7 +10,7 @@
         <%= link_to "Content", edit_section_path(@section.id, :m => "instructions") %>
       </li>
       <li <% if @mode == "tasks" %> class="active" <% end %>>
-        <%= link_to "Tasks", edit_section_path(@section.id, :m => "tasks") %>
+        <%= link_to "Questions", edit_section_path(@section.id, :m => "tasks") %>
       </li>
       <li <% if @mode == "settings" %> class="active" <% end %>>
         <%= link_to "Settings", edit_section_path(@section.id, :m => "settings") %>
