--- a/app/views/sections/edit_tasks.html.erb
+++ b/app/views/sections/edit_tasks.html.erb
@@ -3,10 +3,10 @@
 <section class="tab_content">
 	<% if @tasks.empty? %>
   <div style="padding: 20px;">
-		<p><strong>Tasks</strong> are used to verify someone's <strong>progress</strong> through a section. A task can be something the user must do or a picture they must identify, or simply a multiple choice question.</p>
-    <p>You have not created any tasks for this challenge yet. You can get started by:</p>
+		<p><strong>Questions</strong> are used to verify someone's <strong>progress</strong> through a section. A question can be something the user must do or a picture they must identify, or simply a multiple choice question.</p>
+    <p>You have not created any questions for this challenge yet. You can get started by:</p>
     <ul>
-      <li style="padding:5px;">Creating a <%= link_to "new task manually", new_task_path(:section_id => @section) %>.</li>
+      <li style="padding:5px;">Creating a <%= link_to "new question manually", new_task_path(:section_id => @section) %>.</li>
       <li style="padding:5px;">Let Moonlite automatically generate questions from <%= link_to "your section content", questions_section_path(@section) %>.</li>
       <li style="padding:5px;">Let Moonlite automatically generate questions from <%= link_to "text outside of your section content", edit_section_path(@section, :m => "hidden_content") %>.</li>
     </ul>
