--- a/app/views/paths/show.html.erb
+++ b/app/views/paths/show.html.erb
@@ -13,8 +13,12 @@
           <%= f.submit "Enroll", :class=> "btn primary", :style => "margin: 10px 40px 0px 0px; float:right;" %>
         <% end %>
       <% else %>
-        <%= link_to @start_mode, continue_path_path(@path), :class => "btn primary", :style => "margin: 10px 40px 0px 0px; float:right;"%>
-      <% end %>
+				<% if @start_mode == "Get Started" %>
+					<%= link_to @start_mode, tutorial_path(:p => @path.id), :class => "btn primary", :style => "margin: 10px 40px 0px 0px; float:right;"%>
+				<% else %>
+					<%= link_to @start_mode, continue_path_path(@path), :class => "btn primary", :style => "margin: 10px 40px 0px 0px; float:right;"%>
+				<% end %>
+			<% end %>
     </div>
     <div>
       <h1 style="margin-bottom: 0px;"><%= @path.name %></h1>
