--- a/app/views/companies/join.html.erb
+++ b/app/views/companies/join.html.erb
@@ -1,4 +1,5 @@
-<h1>Join <%= @company.name %> on Moonlite</h1>
+<h2>Join <%= @company.name %> on Moonlite</h2>
+<p style="margin: 20px 0px 30px 0px;">Welcome to Moonlite! Fill out the form below to create an account and join your company.</p>
 <%= form_for @user, :url => { :controller => "companies", :action => "accept" }, :method => "put" do |f| %>
 	<%= render "shared/error_messages", :object => f.object %>
 	<%= f.hidden_field :signup_token, :value => @company.signup_token %>
@@ -24,6 +25,11 @@
 		<%= f.label :password_confirmation, "Confirm password" %>
 		<div class="input">
 			<%= f.password_field :password_confirmation %>
+		</div>
+	</div>
+	<div class="field">
+		<div class="input">
+			<p>Already have a Moonlite account? <%= link_to "Login here.", signin_path %></p>
 		</div>
 	</div>
 	<div class="actions">
