redirecting to root from join if signed in.

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -15,7 +15,7 @@
 					<th>#</th>
 					<th>Name</th>
 					<th>User Type</th>
-					<th>Enrolled Paths</th>
+					<th>Enrolled Challenges</th>
 					<th>Points Earned</th>
 					<th>Status</th>
 				</tr>
