Fixed dashboard page to show the right most correct answers.

--- a/app/views/reports/details.html.erb
+++ b/app/views/reports/details.html.erb
@@ -36,7 +36,7 @@
 				<tr>
 					<th>Rank</th>
 					<th>Question</th>
-					<th>Correct Answers</th>
+					<th>Incorrect Answers</th>
 				</tr>
 			</thead>
 			<tbody>
