--- a/app/views/paths/edit_settings.html.erb
+++ b/app/views/paths/edit_settings.html.erb
@@ -48,6 +48,10 @@
 					</label>
 				</li>
 				<li>
+					<label>
+						<%= f.check_box :enable_nonlinear_sections %>
+						<span>Allow users to do sections in any order</span>
+					</label>
 				</li>
 			</ul>
 		</div>
