--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -15,7 +15,7 @@
 
 /* Path */
 .new_enrollment { display:inline; }
-.path .description p { font-size: 15px; padding: 10px; }
+.path .description p { font-size: 15px; }
 .section-caption { display: inline; z-index: 1000; float: left; position: absolute; width: 155px; margin-left: -5px; background-color: slategray; font-size: 16px; color: whitesmoke; padding: 8px; margin-top: 60px; }
 .path-caption { display: inline; z-index: 1000; float: left; position: absolute; width: 204px; background-color: slategray; color: whitesmoke; padding: 3px 8px 3px 8px; margin: 100px 0 0 -5px; height: 35px; }
 .completion img,.completionh1 h1,.completion h4,.completion a { display: inline; }
