--- a/app/views/pages/_suggested_paths.html.erb
+++ b/app/views/pages/_suggested_paths.html.erb
@@ -1,9 +1,13 @@
 <section class="suggested-paths">
-  <h3><%= paths_title %></h3>
+	<h3><%= paths_title %></h3>
+	<% if paths_list.empty? %>
+	<p>Sorry, we don't have any recommended challenges for you yet. Check back in later!</p>
+	<% else %>
   <ul class="media-grid">
     <% paths_list.each_index do |p| %>
       <% if p >= 4 then break else path = paths_list[p] end %>
       <li><%= link_to image_tag(path.path_pic), path %>
     <% end %>
   </ul>
+	<% end %>
 </section>
