--- a/app/views/paths/edit_sections.html.erb
+++ b/app/views/paths/edit_sections.html.erb
@@ -29,7 +29,7 @@
           <% else %>
           <span class="label important"><%= link_to "not published", edit_section_path(s, :m => "settings"), :style => "color:white;" %></span>
           <% end %>
-          <span class="label"><%= link_to s.tasks.count.to_s + " tasks", edit_section_path(s, :m => "tasks"), :style => "color:white;" %></span>
+          <span class="label"><%= link_to s.tasks.count.to_s + " questions", edit_section_path(s, :m => "tasks"), :style => "color:white;" %></span>
         </div>
         <div style="float:right;display:inline">
           <% if @reorder %>
@@ -45,7 +45,7 @@
             </div>
           <% else %>
             <%= link_to "Edit", edit_section_path(s), :class => "btn secondary" %>
-            <%= link_to "Delete", s, :method => :delete, :confirm => "Are you sure you want to delete this section? This will delete all the tasks associated with it as well.", :class => "btn secondary" %>
+            <%= link_to "Delete", s, :method => :delete, :confirm => "Are you sure you want to delete this section? This will delete all the questions associated with it as well.", :class => "btn secondary" %>
           <% end %>
         </div>
       </tr></td>
