--- a/app/views/sections/preview_content.html.erb
+++ b/app/views/sections/preview_content.html.erb
@@ -8,6 +8,7 @@
 		<%= link_to "Finish", edit_section_path(@section, :m => "instructions"), :class => "btn primary" %>
 	</div>
 	<div>
+		<p>If you have trouble seeing this document, you can <%= link_to "download it here", @info_resource.obj.url %>.</p>
 		<iframe src="http://docs.google.com/viewer?url=<%=u @info_resource.obj.url %>&embedded=true" width="800" height="650" style="border: none;"></iframe>
 	</div>
 </div>
