--- a/app/views/tours/_user_header.html.erb
+++ b/app/views/tours/_user_header.html.erb
@@ -2,7 +2,7 @@
 <ul class="tabs">
 	<% active = "class='active'" %>
 	<li <%= active if @page == 1 %>><%= link_to "Home", user_tour_tour_path(1) %></li>
-	<li <%= active if @page == 2 %>><%= link_to "Paths", user_tour_tour_path(2) %></li>
-	<li <%= active if @page == 3 %>><%= link_to "Company Store", user_tour_tour_path(3) %></li>
+	<li <%= active if @page == 2 %>><%= link_to "Challenges", user_tour_tour_path(2) %></li>
+	<li <%= active if @page == 3 %>><%= link_to "Leaderboard", user_tour_tour_path(3) %></li>
 	<li <%= active if @page == 4 %>><%= link_to "Bon Voyage!", user_tour_tour_path(4) %></li>
 </ul>
