--- a/app/views/sections/continue.html.erb
+++ b/app/views/sections/continue.html.erb
@@ -1,119 +1,35 @@
+<script src="/javascripts/challenge.js"></script>
 <script>
-$(function() {$("#progressbar").progressbar({ value: <%= @progress %> }); });
-
-<% unless @correct.nil? %>
-$(function() {
-  var $correct_status = $("#correct_status");
-  var correct = <%= @correct %>;
-  if(correct){
-    $correct_status.css("color", "#6AAC2B").text("Correct!").animate({opacity: 0.0}, 10000);
-  } else {
-    $correct_status.css("color", "#C43C35").text("Incorrect").animate({opacity: 0.0}, 10000);
-  }
-});
-<% end %>
-
 $(function(){
-  var count = 30;
-  countdown = setInterval(function(){
-    if(count >= 10){
-      $(".timer").html("00:"+count);
-    } else {
-      $(".timer").html("00:0"+count);
-    }
-    
-    if(count==0){
-      $(".timer").removeClass("timer").addClass("expired-timer");
-      $(".streak").animate({opacity: 0.25}, 250);
-      $("#listless").val(false)
-    }count --;
-  }, 1000);
+	<% unless @correct.nil? %> set_answer_status(<%= @correct %>); <% end %>
+	$("#progressbar").progressbar({ value: <%= @progress %> });
+	start_question_timer();
 });
 </script>
-<section class="progress-box" style="margin-bottom: 50px;">
-  <div style="float:right; margin-top: 10px;">
-    <span class="points total"><%= @earned_points %></span>
-    <span class="points current">+<%= @possible_points %></span>
-    <span class="points streak">+<%= @streak_points %></span>
-    <span class="timer">00:30</span>
-  </div>
-  <div id="progressbar" style="float:right; margin-right: 10px;" alt="Progress Bar"></div>
-  <div id="correct_status" style="float:right; margin-top:10px; margin-right: 10px; font-weight: bold;"></div>
-</section>
+<%= render "progress_box", { :earned_points => @earned_points, :possible_points => @possible_points, :streak_points => @streak_points } %>
 <%= form_tag({ :controller => :completed_tasks }, :method => :post) %>
 <div class="task row">
-  <% if @comments_on %>
-  <div class="span10">
-  <% else %>
-  <div class="span16">
-  <% end %>
-    <div class="question">
+  <div class="<%= @comments_on ? "span10" : "span16" %>">
+    
+		<div class="question">
       <h2>Section <%= @section.position.to_s %>. <%= @section.name %></h2>
       <blockquote>
         <p>
           <%= @task.question %>
         </p>
       </blockquote>
-      <% if @info_resource %>
-				<% if @info_resource.obj.content_type.include?("image") %>
-					<img src="<%= @info_resource.obj.url %>" height="250" style="margin-left: 150px; margin-bottom: 30px;">
-				<% end %>
-      <% end %>
+			<%= render "info_resource", { :info_resource => @info_resource } %>
     </div>
+		
     <div class="answer">
       <input type="hidden" name="completed_task[task_id]" value="<%= @task.id %>">
       <input type="hidden" name="completed_task[quiz_session]" value="<%= @quiz_session %>">
-      <div class="field clearfix">
-        <label>Answer:</label>
-        <div class="input">
-          <ul class="inputs-list">
-            <li>
-              <% if !@task.answer1.blank? %>
-              <label>
-                <input id="completed_task_answer1" name="completed_task[answer]" type="radio" value="1">
-                <span><%= @task.answer1 %></span>
-              </label>
-              <% end %>
-              <% if !@task.answer2.blank? %>
-              <label>
-                <input id="completed_task_answer2" name="completed_task[answer]" type="radio" value="2">
-                <span><%= @task.answer2 %></span>
-              </label>
-              <% end %>
-              <% if !@task.answer3.blank? %>
-              <label>
-                <input id="completed_task_answer3" name="completed_task[answer]" type="radio" value="3">
-                <span><%= @task.answer3 %></span>
-              </label>
-              <% end %>
-              <% if !@task.answer4.blank? %>
-              <label>
-                <input id="completed_task_answer4" name="completed_task[answer]" type="radio" value="4">
-                <span><%= @task.answer4 %></span>
-              </label>
-              <% end %>
-            </li>
-          </ul>
-        </div>
-      </div>
+			<%= render "multiple_choice_answer", { :task => @task } %>
     </div>
-  </div>
+  
+	</div>
   <% if @enable_feedback && @comments_on %>
-  <div class="span6">
-    <div class="task-comments">
-      <% unless @comments.empty? %>
-      <ul style="list-style-type: none; margin: 0px; padding: 10px; margin-top: -60px;">
-      <% @comments.each do |comment| %>
-        <li style="line-height: 1;"><strong><%= comment.user.name %>:</strong> <%= comment.content %></li>
-      <% end %>
-      </ul>
-      <% else %>
-        <em style="padding: 15px;">There are no comments for this task</em>
-      <% end %>
-    <input type="hidden" name="comment[task_id]" value="<%= @task.id %>">
-    <textarea name="comment[content]" rows="3" class="xlarge"></textarea>
-    <%= submit_tag "Post Comment", :class => "btn primary", :style=>"margin-top: 10px;" %>
-  </div>
+		<%= render "feedback", { :comments => @comments, :task => @task } %>
   <% end %>
 </div>
 <div class="row">
