--- a/app/views/sections/preview_content.html.erb
+++ b/app/views/sections/preview_content.html.erb
@@ -9,6 +9,7 @@
 	</div>
 	<div>
 		<p>If you have trouble seeing this document, you can <%= link_to "download it here", @info_resource.obj.url %>.</p>
+		<p class="ie_warning" style="display:none;"><strong>NOTE:</strong> If you are using Microsoft Internet Explore, you will need to add <i>http://docs.google.com</i> to your list of trusted sites. <a href="http://windows.microsoft.com/en-us/windows-vista/Security-zones-adding-or-removing-websites" target="_blank">Instructions here.</a></p>
 		<iframe src="http://docs.google.com/viewer?url=<%=u @info_resource.obj.url %>&embedded=true" width="800" height="650" style="border: none;"></iframe>
 	</div>
 </div>
