--- a/app/views/pages/explore.html.erb
+++ b/app/views/pages/explore.html.erb
@@ -16,6 +16,7 @@
 		
 		<% category = c[0] %>
 		<% paths = c[1] %>
+		<% next if paths.empty? %>
     
 		<div class="row" style="padding-left: 20px;">
       <h2><%= category.name %></h2>
