--- a/app/views/sections/continue.html.erb
+++ b/app/views/sections/continue.html.erb
@@ -17,6 +17,7 @@ $(function(){
         <p>
           <%= @task.question %>
         </p>
+				<% if @hint %><p style="font-style:italic; font-size: 14px;"><%= @hint %></p><% end %>
       </blockquote>
 			<%= render "info_resource", { :info_resource => @info_resource } %>
     </div>
@@ -24,7 +25,7 @@ $(function(){
     <div class="answer">
       <input type="hidden" name="completed_task[task_id]" value="<%= @task.id %>">
       <input type="hidden" name="completed_task[quiz_session]" value="<%= @quiz_session %>">
-			<% if @question_type == "single" %>
+			<% if @question_type == "text" %>
 				<%= render "single_answer", { :task => @task } %>
 			<% else %>
 				<%= render "multiple_choice_answer", { :task => @task } %>
