Removing ie warning script from layouts because it was interfering with the leaderboard scripts.

--- a/app/views/sections/edit_instructions.html.erb
+++ b/app/views/sections/edit_instructions.html.erb
@@ -1,3 +1,11 @@
+<!--[IF IE]>
+    <script type="text/javascript">
+			$(function(){
+				console.log("##########################RUNNING IE SCRIPT##########################");
+				$(".ie_warning").show();
+			});
+    </script>
+<![endif]-->
 <%= render "tab_navigation" %>
 <section class="tab_content">
   <% if @section.instructions.blank? & @info_resources.empty? %>
