--- a/app/views/sections/preview_content.html.erb
+++ b/app/views/sections/preview_content.html.erb
@@ -1,3 +1,11 @@
+<!--[IF IE]>
+    <script type="text/javascript">
+			$(function(){
+				console.log("##########################RUNNING IE SCRIPT##########################");
+				$(".ie_warning").show();
+			});
+    </script>
+<![endif]-->
 <style>
 .embedded_viewer { margin: auto; text-align: center; width: 100%; }
 </style>
