--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,3 +1,11 @@
+<!--[IF IE]>
+    <script type="text/javascript">
+			$(function(){
+				console.log("##########################RUNNING IE SCRIPT##########################");
+				$(".ie_warning").show();
+			});
+    </script>
+<![endif]-->
 <section class="tab_content">
 	<h2 style="margin-bottom: 20px;"><%= @section.name %></h2>
 	<p style='font-weight:bold;'>Review the content below before you begin the challenge.</p>
