Added did you mean to suggestions.

--- a/app/views/tasks/suggest.json.erb
+++ b/app/views/tasks/suggest.json.erb
@@ -1,1 +1,1 @@
-{"phrases": <%= @associated_phrases.to_s.html_safe %>}
+{"phrases": <%= @associated_phrases.to_s.html_safe %>, "phrase": "<%= @phrase.original_content.to_s %>" }
