--- a/app/views/tasks/task_form.html.erb
+++ b/app/views/tasks/task_form.html.erb
@@ -15,6 +15,13 @@ $(function(){
     get_suggestions($answer, $suggestions);
   });
 });
+
+function embolden(id){
+	$("#"+id).css("border", "1px solid #5F5F5F");
+	setTimeout(function(){
+		$("#"+id).css("border", "1px solid #CCC");
+	},50);
+}
 </script>
 
 <h1><%= @form_title %></h1>
@@ -29,34 +36,19 @@ $(function(){
 	</div>
   <div class="row">
     <div class="span8 answers">
-      <div class="field clearfix">
-        <% a_class = (@ca == 1 ? "Correct answer" : "Wrong answer") %>
-        <%= f.label a_class + "*" %>
+			<% (1..4).each do |i| %>
+			 <div class="field clearfix">
+        <% status = (@ca == i ? "Correct answer" : "Wrong answer") %>
+        <%= f.label status %>
         <div class="input">
-          <%= f.text_field :answer1, :maxlength => 255, :size => 75, :class => a_class.downcase.gsub(" ","_") %>
+          <%= f.text_field "answer"+i.to_s, :maxlength => 255, :size => 75, :class => status.downcase.gsub(" ","_") %>
+					<% if @ca == i %>
+						<%= image_tag "suggest.png", :size => "15x15", :id => "suggest_icon", :onclick => "embolden('suggest_icon');" %>
+					<% end %>
         </div>
       </div>
-      <div class="field clearfix">
-        <% a_class = (@ca == 2 ? "Correct answer" : "Wrong answer") %>
-        <%= f.label a_class + "*" %>
-        <div class="input">
-          <%= f.text_field :answer2, :maxlength => 255, :size => 75, :class => a_class.downcase.gsub(" ","_") %>
-        </div>
-      </div>
-      <div class="field clearfix">
-        <% a_class = (@ca == 3 ? "Correct answer" : "Wrong answer") %>
-        <%= f.label a_class %>
-        <div class="input">
-          <%= f.text_field :answer3, :maxlength => 255, :size => 75, :class => a_class.downcase.gsub(" ","_") %>
-        </div>
-      </div>
-      <div class="field clearfix">
-        <% a_class = (@ca == 4 ? "Correct answer" : "Wrong answer") %>
-        <%= f.label a_class %>
-        <div class="input">
-          <%= f.text_field :answer4, :maxlength => 255, :size => 75, :class => a_class.downcase.gsub(" ","_") %>
-        </div>
-      </div>
+			<% end %>
+			
 			<% if @sections && @sections.size > 1 %>
 			<div class="field clearfix">
         <%= f.label "Section" %>
@@ -65,6 +57,7 @@ $(function(){
         </div>
       </div>
 			<% end %>
+			
       <% if @info_resource %>
       <div class="field clearfix">
         <%= f.label "Image" %>
@@ -73,11 +66,12 @@ $(function(){
         </div>
       </div>
       <% end %>
-      <span style="font-style: italic; padding-left: 70px; padding-top: 6px">*Required</span><br>
     </div>
-    <div class="span8 suggestions">
-      <p class="not_found_message" style="padding-top:10px; display: none;">No suggestions found.</p>
-      <p class="found_message" style="padding-top:10px; display: none;">Suggestions (doubleclick):</p>
+		
+    <div class="span8 suggestions" style="padding-top:10px;">
+      <p class="not_found_message" style="display: none;">No suggestions found.</p>
+      <p class="did_you_mean" style="display: none;">Did you mean...?</p>
+      <p class="found_message" style="display: none;">Suggestions (doubleclick):</p>
       <ol style="margin-top:10px; display: none;"></ol>
     </div>
   </div>
