Added enable on question generator.

--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -101,6 +101,12 @@
 								<span>Enable auto-enrollment of new users in any published challenge</span>
 							</label>
 						</li>
+						<li>
+							<label>
+								<%= f.check_box :enable_auto_generate %>
+								<span>Enable automatic question generator</span>
+							</label>
+						</li>
 					</ul>
 				</div>
 			</div>
